--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -15,17 +15,17 @@
                 <h3>Our Most Popular Campgrounds!</h3>
             </div>
         </div>
-        <div class="row" style="display:flex;flex-wrap:wrap">
+        <div class="row" id="campgroundForEach">
             <%campgrounds.forEach(function(campground){ %>
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnail">
                     <img src="<%= campground.image%>"></img>
-                    <div class="caption"> <h4><%= campground.name%></h4></div>
-                    <div class="container">
-                        <p>
-                            <a href="/campgrounds/<%=campground._id%>" class="btn btn-primary">More Info</a>
+                    <div class="caption"> <h4><%= campground.name%></h4>
+                    </div>
+                    <div>
+                        <p class="text-center">
+                            <a href="/campgrounds/<%=campground._id%>" class="btn btn-primary ">More Info</a>
                         </p>
-                            
                     </div>
 
                 </div>
