--- a/GroceryList/views/groceryList.html
+++ b/GroceryList/views/groceryList.html
@@ -1,10 +1,10 @@
 <div class="col-xs-12">
-	<a href="#/addItem" style="margin-bottom:10px;" class="btn btn-primary btn-lg btn-block">
-		<span class="glyphicon glyphicon-plus"></span>
-		Add Grocery Item</a>
-		<ul class="list-group">
-			<li ng-repeat="item in groceryItems |orderBy: '-date'" class="list-group-item text-center clearfix">
-				<rp-grocery-item></rp-grocery-item>
-			</li>
-		</ul>
-	</div>
+    <a href="#/addItem" style="margin-bottom: 10px;" class="btn btn-primary btn-lg- btn-block">
+        <span class="glyphicon glyphicon-plus"></span>
+    </a>
+    <ul class="list-group">
+        <li ng-repeat="item in groceryItems | orderBy: '-id'" class="list-group-item text-center clearfix">
+            <rpgroceryitem></rpgroceryitem>	
+        </li>
+    </ul>
+</div>
